# pulumi_aws

./: README.md  pyproject.toml
infra/: Pulumi.test.yaml  Pulumi.yaml  __main__.py  cloudfront.py  cloudwatch.py  ecr.py  ecs_cluster.py  iam.py  load_balancer.py  rds.py  s3_bucket.py  security_groups.py  ses.py  vpc.py
infra/app/backend/: Dockerfile  main.py
infra/app/frontend/react-app/: .dockerignore  Dockerfile  package-lock.json
infra/app/frontend/react-app/src/: App.js  index.css
infra/lambda_definitions/autoscale-trigger/: index.py
infra/lambda_definitions/cache-reset/: index.py
